# analysis-of-paradigms

./: LICENSE  README.md
cpp/: CMakeLists.txt
cpp/common/: fileOperators.hh
cpp/functional/: hash.cc  pid.cc  sorting.cc
cpp/objective/: hash.cc  pid.cc  sorting.cc
cpp/procedural/: hash.cc  pid.cc  sorting.cc
datasets/: random_char_strings.csv  random_double_floats.csv
go/functional/: hash.go  pid.go  sorting.go
go/objective/: hash.go  pid.go  sorting.go
go/procedural/: hash.go  pid.go  sorting.go
launch/: analyse_data.py  analyse_data_2_parag.py  compile_cpp.sh  compile_go.sh  compile_ocaml.sh  compile_rust.sh  compile_zig.sh  perf_task_clock.py  run_cpp_benchmarks.py  run_cpp_benchmarks_2_parag.py
ocaml/functional/: hash.ml  pid.ml  sorting.ml
ocaml/objective/: hash.ml  pid.ml  sorting.ml
ocaml/procedural/: hash.ml  pid.ml  sorting.ml
rust/: Cargo.toml
rust/functional/: hash.rs  pid.rs  sorting.rs
rust/procedural/: hash.rs  pid.rs  sorting.rs
zig/functional/: sorting.zig
zig/procedural/: sorting.zig
